--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
 			<!-- ScrollToTop Button -->
 			<a class="bloc-button btn btn-d scrollToTop" href="#" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
 			<!-- ScrollToTop Button END-->
-	</body>
-	<footer>
+		</div>
+		<footer>
 			<!-- Footer - bloc-8 -->
 			<div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 				<div class="container bloc-sm">
@@ -261,5 +261,6 @@
 			<!-- Footer - bloc-8 END -->
 		</div>
 		<!-- Principal conteneur END -->
-	</footer>
+		</footer>
+	</body>
 </html>
