--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 <!-- Principal conteneur -->
-<div class="page-container">
+<main class="page-container">
     
 <!-- bloc-0 -->
 <div class="bloc bgc-white l-bloc " id="bloc-1">
@@ -29,7 +29,7 @@
 
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="paris web design logo agence web meilleure agence" height="40" /></a>
+				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="Logo" height="40" /></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -150,9 +150,7 @@
 	</div>
 </footer>
 <!-- Footer - bloc-8 END -->
-
-</div>
-</div>
+</main>
 <!-- Principal conteneur END -->
     
 <script src="./js/jquery-2.1.0.js"></script>
