--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 	
 	<body>
 		<!-- Principal conteneur -->
-		<section class="page-container">
+		<main class="page-container">
 			
 			<!-- bloc-0 -->
-			<div class="bloc bgc-white l-bloc " id="bloc-1">
+			<section class="bloc bgc-white l-bloc " id="bloc-1">
 				<div class="container bloc-sm">
 
 					<nav class="navbar row">
@@ -47,15 +47,15 @@
 						</div>
 					</nav>
 				</div>
-			</div>
+			</section>
 			<!-- bloc-0 END -->
 
 			<!-- bloc-1-presentation -->
-			<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
+			<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
 				<div class="container bloc-lg">
 					<div class="row tight-width-whitespace">
 						<div class="col-sm-12">
-							<img src="img/logo.web.webp" class="center-block image-resize-mode" width="100" alt="Agence La Panthère, agence web paris, création logo paris" />
+							<img src="img/logo.web.webp" class="center-block image-resize-mode" width="100" alt="Logo" />
 							<h1 class="text-center hero-bloc-text tc-white ">
 								Agence La Panthère
 							</h1>
@@ -65,7 +65,7 @@
 						</div>
 					</div>
 				</div>
-			</div>
+			</section>
 			<!-- bloc-1-presentation END -->
 
 			<!-- bloc-2-services -->
@@ -123,7 +123,7 @@
 			<!-- bloc-2-services END -->
 
 			<!-- bloc-3-what-i-do -->
-			<div class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
+			<section class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
 				<div class="container bloc-lg">
 					<div class="row tight-width-whitespace black-background">
 						<div class="col-sm-12">
@@ -136,7 +136,7 @@
 						</div>
 					</div>
 				</div>
-			</div>
+			</section>
 			<!-- bloc-3-what-i-do END -->
 
 			<!-- bloc-4-portfolio -->
@@ -149,7 +149,7 @@
 					</div>
 					<div class="row tight-width-whitespace portfolio-row">
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/1.web.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.web.webp" alt="paris web design logo agence web meilleure agence et refonte site web journal" class="img-responsive portfolio-thumb" /></a>
+							<a href="#" data-lightbox="img/1.web.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.web.webp" alt="Refonte site web journal" class="img-responsive portfolio-thumb" /></a>
 							<h3 class="mg-md text-center">
 								Refonte d'un site web pour un journal local
 							</h3>
@@ -158,7 +158,7 @@
 							</p>
 						</div>
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/2.web.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.web.webp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
+							<a href="#" data-lightbox="img/2.web.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.web.webp" class="img-responsive portfolio-thumb" alt="Création d'un site web pour photographes" /></a>
 							<h3 class="mg-md text-center">
 								Création d'un site web pour photographes
 							</h3>
@@ -169,7 +169,7 @@
 					</div>
 					<div class="row tight-width-whitespace portfolio-row">
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/3.web.webp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.web.webp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur"/></a>
+							<a href="#" data-lightbox="img/3.web.webp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.web.webp" class="img-responsive portfolio-thumb" alt="Création d'un site web pour voyageur"/></a>
 							<h3 class="mg-md text-center">
 								Création d'un site internet pour un voyageur
 							</h3>
@@ -178,7 +178,7 @@
 							</p>
 						</div>
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/4.web.webp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.web.webp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
+							<a href="#" data-lightbox="img/4.web.webp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.web.webp" class="img-responsive portfolio-thumb" alt="Création d'un site web pour agence de mariage" /></a>
 							<h3 class="mg-md text-center">
 								Conception d'un site pour une agence de mariage
 							</h3>
@@ -192,7 +192,7 @@
 			<!-- bloc-4-portfolio END -->
 
 			<!-- bloc-5-cta -->
-			<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
+			<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 				<div class="container bloc-lg">
 					<div class="row">
 						<h2 class="mg-md text-center tc-white">
@@ -203,12 +203,12 @@
 						</div>
 					</div>
 				</div>
-			</div>
+			</section>
 			<!-- bloc-5-cta END -->
 			<!-- ScrollToTop Button -->
 			<a class="bloc-button btn btn-d scrollToTop" href="#" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
 			<!-- ScrollToTop Button END-->
-		</section>
+		</main>
 		<footer>
 			<!-- Footer - bloc-8 -->
 			<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
