--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 			</section>
 			<!-- bloc-5-cta END -->
 			<!-- ScrollToTop Button -->
-			<a class="bloc-button btn btn-d scrollToTop" href="#" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
+			<a class="bloc-button btn btn-d scrollToTop" href="#" aria-label="Returntotop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
 			<!-- ScrollToTop Button END-->
 		</main>
 		<footer>
@@ -221,22 +221,22 @@
 							<div class="row row-no-gutters social">
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+										<a class="social" href="index.html" aria-label="Twitter"><span class="fa fa-twitter icon-md"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+										<a class="social" href="index.html" aria-label="Facebook"><span class="fa fa-facebook icon-md"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+										<a class="social" href="index.html" aria-label="Dribbble"><span class="fa fa-dribbble icon-md"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+										<a class="social" href="index.html" aria-label="Instagram"><span class="fa fa-instagram icon-md"></span></a>
 									</div>
 								</div>
 						</div>
